--- a/.github/workflows/transcribe_streams.yml
+++ b/.github/workflows/transcribe_streams.yml
@@ -2,9 +2,7 @@ name: Daily Radio Transcription
 
 on:
   schedule:
-    - cron: "0 4 * * 1-5"   # 04:00 UTC (~06:00–07:00 Monday to Friday)
-    - cron: "0 5 * * 6"   # 05:00 UTC (~07:00–08:00 Saturday)
-    - cron: "0 5 * * 0"   # 05:00 UTC (~07:00–08:00 Sunday)
+    - cron: "0 22 * * *"   # 22:00 UTC
   workflow_dispatch:
 
 concurrency:
